Adding Vuex to the project and separating each functional part into a component.

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -8,7 +8,7 @@ $colorBg1: #041729; // header
 $colorBg2: rgba(0,0,0,0.8);
 $colorBg3: rgba(0,0,0,0.85);
 $colorBg4: #AD4545; // gradient
-$colorBg5: #FEFFFF; // hover background reset
+$colorBg5: #FEFFFF; // hover background / text
 $colorBg6: #041729; // gradient
 $colorText1: #fff;
 $colorText2: #000;
